<resources>
  <string name="app_name">lab02</string>
  <!--register-->
  <string name="activity_register_msg_registration">Registration</string>
  <string name="activity_register_msg_display_name">Display Name</string>
  <string name="activity_register_msg_username">Username</string>
  <string name="activity_register_msg_password">Password</string>
  <string name="activity_register_msg_confirm_password">Confirm Password</string>
  <string name="activity_register_act_sign_up">Sign Up</string>
  <string name="home_msg_successfully_message">You have singed up successfully!</string>
</resources>
