<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center">

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/activity_register_msg_registration"
      android:textColor="@color/colorPrimary"
      android:textSize="50sp" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/large_margin"
      android:text="@string/activity_register_msg_username" />

    <EditText
      android:id="@+id/activity_sign_up_edt_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" />

    <TextView
      android:id="@+id/activity_sign_up_txt_username_error"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/colorDanger"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/medium_margin"
      android:text="@string/activity_register_msg_password" />

    <EditText
      android:id="@+id/activity_sign_up_edt_pwd"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword" />

    <TextView
      android:id="@+id/activity_sign_up_txt_pwd_error"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/colorDanger"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/medium_margin"
      android:text="@string/activity_register_msg_confirm_password" />

    <EditText
      android:id="@+id/activity_sign_up_edt_confirm_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword" />

    <TextView
      android:id="@+id/activity_sign_up_txt_confirm_password_error"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/colorDanger"/>

    <Button
      android:id="@+id/activity_sign_up_btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      android:layout_marginTop="@dimen/large_margin"
      android:textColor="#ffffff"
      android:text="@string/activity_register_act_sign_up" />
  </LinearLayout>
</LinearLayout>